Software/Code Playground/.metadata/.plugins/org.eclipse.cdt.ui/DAC_SINEWAVE.build.log
16:55:17 **** Incremental Build of configuration Debug for project DAC_SINEWAVE ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/AX.25.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F446xx -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/AX.25.d" -MT"Core/Src/AX.25.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/AX.25.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F446xx -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/AX.25.c: In function 'tx_rx':
../Core/Src/AX.25.c:37:31: warning: pointer targets in passing argument 2 of 'HAL_UART_Transmit' differ in signedness [-Wpointer-sign]
    HAL_UART_Transmit(&huart2, uartData, strlen(uartData), 10);
                               ^~~~~~~~
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:404:0,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:30,
                 from ../Core/Inc/main.h:31,
                 from ../Core/Src/AX.25.h:12,
                 from ../Core/Src/AX.25.c:7:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:696:19: note: expected 'uint8_t * {aka unsigned char *}' but argument is of type 'char *'
 HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size, uint32_t Timeout);
                   ^~~~~~~~~~~~~~~~~
../Core/Src/AX.25.c: In function 'AX25_Packet_Validate':
../Core/Src/AX.25.c:155:6: warning: unused variable 'fcs_val' [-Wunused-variable]
  int fcs_val = 0;
      ^~~~~~~
../Core/Src/AX.25.c:154:24: warning: unused variable 'local_packet' [-Wunused-variable]
  struct PACKET_STRUCT* local_packet = &global_packet;
                        ^~~~~~~~~~~~
../Core/Src/AX.25.c: In function 'set_packet_pointer_AX25':
../Core/Src/AX.25.c:192:19: warning: initialization from incompatible pointer type [-Wincompatible-pointer-types]
  bool *curr_mem = &local_packet->AX25_PACKET; //keep track of what address to copy from
                   ^
../Core/Src/AX.25.c:199:10: warning: 'return' with a value, in function returning void
   return false; //discard
          ^~~~~
../Core/Src/AX.25.c:190:6: note: declared here
 void set_packet_pointer_AX25(){
      ^~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/AX.25.c: In function 'AX25_TO_KISS':
../Core/Src/AX.25.c:226:19: warning: initialization from incompatible pointer type [-Wincompatible-pointer-types]
  bool *curr_mem = &local_packet->KISS_PACKET;
                   ^
../Core/Src/AX.25.c: In function 'KISS_TO_AX25':
../Core/Src/AX.25.c:260:19: warning: initialization from incompatible pointer type [-Wincompatible-pointer-types]
  bool *curr_mem = &local_packet->KISS_PACKET; //keep track of what address to copy from
                   ^
../Core/Src/AX.25.c:269:10: warning: 'return' with a value, in function returning void
   return false; //discard
          ^~~~~
../Core/Src/AX.25.c:257:6: note: declared here
 void KISS_TO_AX25(){
      ^~~~~~~~~~~~
../Core/Src/AX.25.c:296:9: warning: 'return' with a value, in function returning void
  return true; //valid packet
         ^~~~
../Core/Src/AX.25.c:257:6: note: declared here
 void KISS_TO_AX25(){
      ^~~~~~~~~~~~
../Core/Src/AX.25.c: In function 'bitstuffing':
../Core/Src/AX.25.c:322:5: warning: implicit declaration of function 'bitshift'; did you mean 'bit_shift'? [-Wimplicit-function-declaration]
     bitshift(&(packet->KISS_PACKET[i]),bits_left);
     ^~~~~~~~
     bit_shift
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:127:30: error: 'HEX_KISS_PACKET' undeclared (first use in this function); did you mean 'CEC_ISR_RXACKE'?
   HAL_UART_Receive(&huart2, &HEX_KISS_PACKET, 30000, 100);
                              ^~~~~~~~~~~~~~~
                              CEC_ISR_RXACKE
../Core/Src/main.c:127:30: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/AX.25.c: In function 'receiving_KISS':
../Core/Src/AX.25.c:356:10: error: 'HEX_KISS_PACKET' undeclared (first use in this function); did you mean 'CEC_ISR_RXACKE'?
  memset(&HEX_KISS_PACKET, 0, 30000);
          ^~~~~~~~~~~~~~~
          CEC_ISR_RXACKE
../Core/Src/AX.25.c:356:10: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/AX.25.c:361:42: error: invalid type argument of '->' (have 'struct PACKET_STRUCT')
  HAL_UART_Receive(&huart2, &global_packet->HEX_KISS_PACKET, 30000, 100);
                                          ^~
../Core/Src/AX.25.c:363:6: error: expected expression before ')' token
  for()
      ^
../Core/Src/AX.25.c:363:6: error: expected expression before ')' token
In file included from ../Core/Src/FreqIO.h:15:0,
                 from ../Core/Src/AX.25.h:13,
                 from ../Core/Src/AX.25.c:7:
../Core/Src/AX.25.c:365:2: error: expected expression before '_Bool'
  bool check_int = false;
  ^
../Core/Src/AX.25.c:367:15: error: invalid type argument of '->' (have 'struct PACKET_STRUCT')
  global_packet->HEX_KISS_PACKET{
               ^~
../Core/Src/AX.25.c:367:32: error: expected ';' before '{' token
  global_packet->HEX_KISS_PACKET{
                                ^
../Core/Src/AX.25.c:366:6: warning: unused variable 'flags' [-Wunused-variable]
  int flags = 0;
      ^~~~~
../Core/Src/AX.25.c:352:24: warning: unused variable 'local_packet' [-Wunused-variable]
  struct PACKET_STRUCT* local_packet = &global_packet;
                        ^~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:43: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
make: *** [Core/Src/subdir.mk:39: Core/Src/AX.25.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

16:55:17 Build Failed. 11 errors, 12 warnings. (took 557ms)

